# conan-examples2

examples/libraries/ray_tracing/rendering/: CMakeLists.txt  COPYING.txt  conanfile.txt  run_example.py
examples/libraries/ray_tracing/rendering/assets/: scene2.txt
examples/libraries/ray_tracing/rendering/src/: BuilderUtility.cpp  BuilderUtility.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Plane.cpp  Plane.h  RayTracing.cpp  Scene.cpp  Scene.h  SceneElement.h  SceneFile.cpp  SceneFile.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
